2002-12-31  Junichi Uekawa  <dancer@debian.org>

	* debian/README.Debian (Testsuite): update the number of 
	packages which do build and not build.
	5000 builds -> 6000
	1000 fail -> 600

	* Documentation/pbuilder-doc.xml: import some parts from 
	README.Debian.

	* debian/README.Debian (Try): removed some parts to XML doc.

	* Documentation/pbuilder-doc.xml: add notes on how to set up 
	pentium-builder  for building.

	* Documentation/Makefile (install): add install method.

	* Makefile (install): add install method for docs.

	* Documentation/pbuilder-doc.xml: history of pbuilder moved to here.

	* AUTHORS: history and background of pbuilder is moved over and 
	remove from here.

	* Documentation/pbuilder-doc.xml: add docs on pbuildd.

	* pbuildd/Makefile (install): add /var/cache/pbuilder/pbuildd dir

2002-12-30  Junichi Uekawa  <dancer@debian.org>

	* Makefile: install pbuildd files as well.

	* pbuildd/buildd.sh: modified for pbuilder.

	* pbuildd/buildd-config.sh (HOOKDIR): modified for pbuilder.

2002-12-28  Junichi Uekawa  <dancer@debian.org>

	* Documentation/Makefile (all): documentation makefile.

	* Documentation/pbuilder-doc.xml: start to create documentation.

2002-12-23  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-satisfydepends: add note of which versions to try in pdebuild.

2002-12-18  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux: try to use COW device.
	I had a typo, fix it.

	* pbuilder-user-mode-linux.1: document

2002-12-16  Junichi Uekawa  <dancer@debian.org>

	* THANKS: update.

	* pdebuild.1: More vigorously document pdebuild option, which changed.
	From: Jose Carlos Garcia Sogo <jsogo@debian.org>.

2002-12-15  Junichi Uekawa  <dancer@debian.org>

	* THANKS: update this file, thinking that this file is probably autogenerated from
	ChangeLog on other projects...

	* pbuilder-modules (pbuilder-options): modify the ordering of scripts so that 
	concurrent-build experience is more active.