@@ -1,3 +1,8 @@
+2003-01-03  Junichi Uekawa  <dancer@debian.org>
+
+	* Documentation/pbuilder-doc.xml: add notes on what kind of things 
+	to expect when mass-autobuilding.
+
 2002-12-31  Junichi Uekawa  <dancer@debian.org>
 
 	* debian/README.Debian (Testsuite): update the number of 
